# ffffff

./: .gitignore  .pre-commit-hooks.yaml  .travis.yml  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml  vendoring.yml
ffffff/_vendor/: black.py  blackd.py  vendor.txt
ffffff/_vendor/blib2to3/pgen2/: tokenize.py
ffffff/_vendor/pathspec/tests/: test_pathspec.py  test_util.py
ffffff/_vendor/toml/: __init__.py  decoder.py  encoder.py
src/ffffff/_vendor/: mypy_extensions.py  vendor.txt
src/ffffff/_vendor/black/: __init__.py  __main__.py
src/ffffff/_vendor/black_primer/: cli.py  lib.py
src/ffffff/_vendor/blib2to3/: pytree.py
src/ffffff/_vendor/blib2to3/pgen2/: driver.py  parse.py  pgen.py  token.py  tokenize.py
src/ffffff/_vendor/pathspec/tests/: test_gitwildmatch.py  test_util.py
src/ffffff/_vendor/toml/: __init__.py  decoder.py  encoder.py  ordered.py
tasks/: __init__.py
tasks/vendoring/: __init__.py
tasks/vendoring/patches/: black-20.8b1.patch  black.patch
