[metadata]
name = ffffff
url = https://github.com/grktsh/ffffff
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude = tasks*

[options.package_data]
ffffff._vendor.blib2to3 = *.txt

[options.extras_require]
d = aiohttp >= 3.3.2

[options.entry_points]
console_scripts =
    ffffff=ffffff._vendor.black:main
    dddddd=ffffff._vendor.blackd:main [d]

[bdist_wheel]
universal = 1
