[metadata]
name = ffffff
url = https://github.com/grktsh/ffffff
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:

[options.packages.find]
exclude = tasks*

[options.extras_require]
d = aiohttp >= 3.3.2

[options.entry_points]
console_scripts =
    ffffff=ffffff._vendor.black:main
    dddddd=ffffff._vendor.blackd:main [d]

[bdist_wheel]
universal = 1
