[metadata]
name = ffffff
description = Black but single quotes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grktsh/ffffff
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance

[options]
zip_safe = False
install_requires =
    regex
    typed-ast >=1.4.0
python_requires = >=3.6
include_package_data = True
packages = find:

[options.packages.find]
exclude = tasks*

[options.entry_points]
console_scripts =
    ffffff=ffffff._vendor.black:patched_main

[bdist_wheel]
universal = 1
